# Maturitna_praca-Server

./: .env.dev  .gitignore  architecture.drawio  flowchart-trigger.drawio  pyproject.toml
app/: admin.py  models.py  mqtt_listener.py  mqtt_publisher.py  permissions.py  serializers.py  urls.py  views.py
app/management/commands/: start_mqtt.py
ecv_detection/: mpfinal.py  pyproject.toml
project/: asgi.py  consumers.py  middleware.py  routing.py  settings.py  urls.py
