[tool.poetry]
name = "maturitna_praca"
version = "0.1.0"
description = ""
authors = ["danddorr <120369188+danddorr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.2"
djoser = "^2.2.3"
drf-spectacular = "^0.27.2"
drf-spectacular-sidecar = "^2024.6.1"
django-cors-headers = "^4.4.0"
paho-mqtt = "^2.1.0"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
